--- a/FE900_Thesis/SV_stevensThesis.tex
+++ b/FE900_Thesis/SV_stevensThesis.tex
@@ -75,7 +75,7 @@
 \usepackage{appendix}
 \usepackage{tikz}
 
-\usetikzlibrary{matrix,shapes,arrows,positioning,chains,shadows,arrows.meta,backgrounds,fit,scopes}
+\usetikzlibrary{matrix,shapes,arrows,positioning,chains,shadows,arrows.meta,backgrounds,fit,scopes,automata}
 %\usetikzlibrary{shadows,arrows.meta,backgrounds,fit,scopes}
 
 % Define block styles
